# ci-deploy-test

./: CMakeLists.txt  appveyor.yml  circle.yml  circleci_deploy.sh  config.h.in
src/: library.cpp  library.h
